# poc-rust

./: .gitignore  Cargo.toml  Dockerfile  Makefile  Readme.md  benchmark.yml  buildspec.yml  db.sql  env.sh
migrations/2020-12-03-022612_initialize/: up.sql
src/: db.rs  main.rs  models.rs  routes.rs  schema.rs
