[package]
name = "poc-rust"
version = "0.1.0"
authors = ["philippe@metrio.net"]
edition = "2018"

[dependencies]
tokio = {  version = "0.2", features = ["macros", "rt-threaded"] }
warp = "0.2"
serde = {version = "1.0", features = ["derive"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = { version = "0.3.4", default-features = false, features = ["async-await"] }
mongodb = "1.1.1"
log = "0.4"
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"

[profile.dev]
debug = 0

[profile.test]
debug = 0

[profile.release]
panic = 'abort'